tests/errors/inst/register3 2.s
.name "Zork"
.comment "Hello, i'm Zork"          

ld %0, r16 32
